# oxen-vcs-logic

./: .gitignore  .swiftformat  ACTION_PLAN_REVISED.md  ASSESSMENT_QUICK_REFERENCE.txt  AUXIN_RENAME_PLAN.md  AUXIN_SERVER.md  AUXIN_SERVER_PLAN.md  BUILD_AND_RUN.md  BUILD_ISSUES.md  BUSINESS_MODEL.md  CHANGELOG.md  CLAUDE.md  CLI_COMPLETENESS_ASSESSMENT.md  CLI_FEATURE_AUDIT.md  CLI_FIRST_PLAN.md  CLI_INTEGRATION_TESTING.md  CODEBASE_ANALYSIS.md  COLLABORATION_COMPLETENESS.md  CONFIGURATION.md  CONTRIBUTING.md  CRITICAL_BUG_REPORT.md  Cargo.toml  DEMO_SCRIPT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  EXAMPLES_COMPLETE.md  FEATURE_STATUS.md  FORMATTING.md  GAP_ANALYSIS_2025-11-20.md  GITHUB_ISSUE_PROCESS_EFFICIENCY.md  INSTALL.md  INTEGRATION_TEST_PLAN.md  LICENSE  MISSING_FEATURES_ANALYSIS.md  NEXT_STEPS.md  OXVCS_SERVER_PLAN.md  OXVCS_SERVER_REVISED.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_QUICK_REFERENCE.md  (+38 more)
.github/: CI_CD_GUIDE.md  (+4 more)
Auxin-CLI-Wrapper/: CLI_POLISH_COMPLETE.md  Cargo.toml  README.md  TEST_COVERAGE_REPORT.md  USAGE.md  config.toml.example  install.sh
Auxin-CLI-Wrapper/.cargo/: config.toml
Auxin-CLI-Wrapper/completions/: README.md  _auxin  auxin.bash  auxin.fish  auxin.ps1
Auxin-CLI-Wrapper/formula/: README.md  auxin.rb
Auxin-CLI-Wrapper/resources/: hooks_readme.md
Auxin-CLI-Wrapper/src/: auth.rs  backup_recovery.rs  blender_metadata.rs  blender_project.rs  bounce.rs  chunked_upload.rs  collaboration.rs  commit_metadata.rs  config.rs  conflict_detection.rs  daemon_client.rs  draft_manager.rs  hooks.rs  ignore_template.rs  lib.rs  lock_integration.rs  logic_project.rs  main.rs  network_resilience.rs  offline_queue.rs  operation_history.rs  oxen_backend.rs  oxen_ops.rs  oxen_subprocess.rs  remote_lock.rs  screenshot.rs  search.rs  server_client.rs  sketchup_metadata.rs  sketchup_project.rs  thumbnail.rs  workflow_automation.rs  write_ahead_log.rs
Auxin-CLI-Wrapper/src/console/: mod.rs
Auxin-CLI-Wrapper/src/liboxen_stub/: api.rs  branches.rs  command.rs  model.rs
Auxin-CLI-Wrapper/src/logic_parser/: binary_parser.rs  mod.rs  project_data.rs
Auxin-CLI-Wrapper/src/metadata_diff/: diff_engine.rs  diff_types.rs  mod.rs  report_generator.rs
Auxin-CLI-Wrapper/tests/: BRANCHING_TEST_COVERAGE.md  COLLABORATION_TEST_COVERAGE.md  activity_feed_integration_test.rs  bounce_integration_test.rs  branch_operations_test.rs  cli_integration_test.rs  clone_integration_test.rs  collaboration_integration_test.rs  console_tui_test.rs  diff_integration_test.rs  draft_manager_integration_test.rs  example_test.rs  hooks_integration_test.rs  multi_user_workflow_test.rs  network_resilience_test.rs  oxen_subprocess_integration_test.rs  push_pull_integration_test.rs  restore_integration_test.rs  team_comments_integration_test.rs  thumbnail_integration_test.rs
Auxin-CLI-Wrapper/tests/common/: mock_oxen_hub.rs  mod.rs
OxVCS-CLI-Wrapper/: CLI_HELP.md  CLI_POLISH_COMPLETE.md  Cargo.toml  README.md  TEST_COVERAGE_REPORT.md  USAGE.md  VERBOSE_MODE.md  config.toml.example  install.sh
OxVCS-CLI-Wrapper/completions/: README.md  _oxenvcs-cli  oxenvcs-cli.bash  oxenvcs-cli.fish  oxenvcs-cli.ps1
OxVCS-CLI-Wrapper/formula/: README.md  oxenvcs-cli.rb
OxVCS-CLI-Wrapper/resources/: hooks_readme.md
OxVCS-CLI-Wrapper/src/: auth.rs  collaboration.rs  commit_metadata.rs  config.rs  conflict_detection.rs  daemon_client.rs  draft_manager.rs  hooks.rs  ignore_template.rs  lib.rs  lock_integration.rs  logger.rs  logic_project.rs  main.rs  network_resilience.rs  offline_queue.rs  operation_history.rs  oxen_ops.rs  oxen_subprocess.rs  progress.rs  remote_lock.rs  search.rs  workflow_automation.rs
OxVCS-CLI-Wrapper/src/console/: mod.rs
OxVCS-CLI-Wrapper/src/liboxen_stub/: api.rs  branches.rs  command.rs  mod.rs  model.rs  opts.rs
OxVCS-CLI-Wrapper/src/logic_parser/: mod.rs
OxVCS-CLI-Wrapper/tests/: cli_integration_test.rs  collaboration_integration_test.rs  draft_manager_integration_test.rs  example_test.rs  oxen_subprocess_integration_test.rs  restore_integration_test.rs
auxin-oxen/: Cargo.toml
auxin-oxen/src/: lib.rs  oxen_subprocess.rs
auxin-server/: .dockerignore  .env.example  BUILD_MACOS_26.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FRONTEND_SETUP.md  INSTALL.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  build-frontend.sh  config.docker.toml  deploy-local.sh  docker-compose.yml  run-local.sh  start.sh  test-deployment.sh  validate-install.sh
auxin-server/docs/: AUTHENTICATION.md
auxin-server/frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
auxin-server/gcp/: cloudbuild.yaml
auxin-server/migrations/: 001_create_projects.sql
auxin-server/scripts/: KNOWN_ISSUES.md  README.md  restart.sh  setup.sh  start.sh  status.sh  stop.sh  test-install.sh  uninstall.sh
auxin-server/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  project.rs  repo.rs  repo_access.rs  repo_full.rs  repo_mock.rs  websocket.rs
auxin-server/tests/: E2E_STATUS.md  E2E_TEST_SPEC.md  README.md  api_tests.rs  auth_integration_tests.rs  collaboration_e2e_tests.rs  e2e_real_oxen.rs  e2e_real_oxen.rs.incomplete  error_handling_tests.rs  feature_flag_tests.rs  mock_repository_tests.rs  project_api_tests.rs  project_crud_tests.rs  project_edge_cases_tests.rs
oxvcs-server/: .env.example  .gitignore  Cargo.toml  GETTING_STARTED.md  README.md  docker-compose.yml
oxvcs-server-v2/: .env.example  Cargo.toml  README.md
oxvcs-server-v2/src/: main.rs
oxvcs-server/migrations/: 001_create_users.sql  002_create_repositories.sql  003_create_commits_and_blocks.sql  004_create_locks.sql  005_create_activity.sql
oxvcs-server/src/: config.rs  db.rs  error.rs  main.rs  models.rs
virtual-debate-panel/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
virtual-debate-panel/config/: settings.py
virtual-debate-panel/docs/: API.md  ARCHITECTURE.md
virtual-debate-panel/scripts/: create_expertise_profiles.py  ingest_author.py  init_database.py
virtual-debate-panel/src/: __init__.py
(+347 files in other folders)
