[workspace]
members = [
    "Auxin-CLI-Wrapper",
    "auxin-server",
    "auxin-config",
]

[workspace.dependencies]
# Common dependencies for the workspace
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
colored = "2.0"
clap = { version = "4.0", features = ["derive", "env"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
actix-web = "4"
dotenvy = "0.15"

# Specify resolver version
resolver = "2"
