[package]
name = "oxenvcs-cli"
version = "0.1.0"
edition = "2021"
authors = ["Oxen-VCS Contributors"]
license = "MIT"
description = "High-performance CLI wrapper for Oxen.ai operations"

[dependencies]
# NOTE: liboxen does not exist on crates.io yet
# This is commented out until Oxen.ai publishes Rust bindings
# liboxen = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "oxenvcs-cli"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# [[bench]]
# name = "oxen_operations"
# harness = false
