[package]
name = "auxin-oxen"
version = "0.1.0"
edition = "2021"
authors = ["Auxin Contributors"]
license = "MIT"
description = "Shared Oxen VCS integration for Auxin (subprocess-based)"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.29", features = ["serde"] }
colored = "2.0"
log = "0.4"
wait-timeout = "0.2"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
