[package]
name = "oxvcs-server"
version = "0.1.0"
edition = "2021"
authors = ["OxVCS Team"]
description = "Self-hosted repository server for OxVCS (Logic Pro version control)"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# S3 Storage
aws-sdk-s3 = "1.0"
aws-config = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
bytes = "1"
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# Configuration
dotenvy = "0.15"

# Development dependencies
[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
mime = "0.3"

[[bin]]
name = "oxvcs-server"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
